MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/Communication_Matrix__c.object-meta.xml
<CustomObject>
    <label>Communication Matrix</label>
    <nameField>
        <displayFormat>CM-{0000000}</displayFormat>
        <label>Communication Matrix Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Matrix</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>