MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Matrix</relationshipLabel>
    <relationshipName>Communication_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>