MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Communication_Name__c.field-meta.xml
<CustomField>
    <fullName>Communication_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Communication Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>