MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>Communication_Type__c</fullName>
    <label>Communication Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>