MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/DeliveredDate__c.field-meta.xml
<CustomField>
    <fullName>DeliveredDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DeliveredDate</label>
    <type>Date</type>
</CustomField>