MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/EmailTemplateName__c.field-meta.xml
<CustomField>
    <fullName>EmailTemplateName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EmailTemplateName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>