MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>