MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Matrix</relationshipLabel>
    <relationshipName>Communication_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>