MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>