MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Message_Subject__c.field-meta.xml
<CustomField>
    <fullName>Message_Subject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Message Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>