MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Communication Matrix</relationshipLabel>
    <relationshipName>Communication_Matrix</relationshipName>
    <type>Lookup</type>
</CustomField>