MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/ReceiverEmails__c.field-meta.xml
<CustomField>
    <fullName>ReceiverEmails__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReceiverEmails</label>
    <type>TextArea</type>
</CustomField>