MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>