MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Related_Record_Link__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Related_Record_Id__c, Record_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Record Link</label>
    <type>Text</type>
</CustomField>