MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/SenderEmail__c.field-meta.xml
<CustomField>
    <fullName>SenderEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SenderEmail</label>
    <length>200</length>
    <type>Text</type>
</CustomField>