MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vertical</label>
    <length>200</length>
    <type>Text</type>
</CustomField>