MODON MRE BPDEV/force-app/main/default/objects/Communication_Matrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Communication_Name__c</columns>
    <columns>Department__c</columns>
    <columns>Message_Subject__c</columns>
    <columns>ReceiverEmails__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SenderEmail__c</columns>
    <columns>Vertical__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>DeliveredDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>